--- a/settings.json.template
+++ b/settings.json.template
@@ -5,6 +5,7 @@
 	"validate_https_certificate": "yes",
 	"ap_group": "ap-group-name-case-sensitive",
 	"ssid": "ssid-name",
+        "encryption": "WPA/WPA2",
 	"psk_length": 12,
         "send_psk_via_mail": "yes",
         "email_from": "yourmailFROMaddress@mailprovider.com",
